--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,3 +23,18 @@ body {
     text-wrap: balance;
   }
 }
+
+.btn {
+  @apply rounded px-5 py-1.5 transition text-white bg-blue-500 hover:bg-blue-600;
+}
+.btn.ghost {
+  @apply text-black bg-transparent;
+}
+
+input {
+  @apply block text-base outline-none transition border border-gray-400 px-4 py-1.5 rounded-md focus:border-blue-700 focus:ring-1;
+}
+
+.link {
+  @apply text-sky-500 transition hover:text-sky-600;
+}
